--- a/public/assets/src/transactions/transactions-create.html
+++ b/public/assets/src/transactions/transactions-create.html
@@ -1,56 +1,71 @@
 <!-- start: PAGE TITLE -->
 <div ng-controller="TransactionsCreateCtrl">
-<section id="page-title">
-	<div class="row">
-		<div class="col-sm-8">
-			<h1 class="mainTitle" > CREATE CARS</h1>
+	<section id="page-title">
+		<div class="row">
+			<div class="col-sm-8">
+				<h1 class="mainTitle"> CREATE Transactios</h1>
+			</div>
+			<div ncy-breadcrumb></div>
 		</div>
-		<div ncy-breadcrumb></div>
-	</div>
-</section>
-<uib-alert ng-repeat="alert in alerts" gender="{{alert.gender}}" close="closeAlert($index)">
-	{{alert.msg}}
-</uib-alert>
-<!-- end: PAGE TITLE -->
-<!-- start: FORM VALIDATION -->
-<div class="container-fluid container-fullw bg-white">
-	<div class="row">
-		<div class="col-md-12">
-			<div >
-				<form name="Form" >
-					<div class="row">
-						<div class="col-md-12">
-							<fieldset>
+	</section>
+	<uib-alert ng-repeat="alert in alerts" gender="{{alert.gender}}" close="closeAlert($index)">
+		{{alert.msg}}
+	</uib-alert>
+	<!-- end: PAGE TITLE -->
+	<!-- start: FORM VALIDATION -->
+	<div class="container-fluid container-fullw bg-white">
+		<div class="row">
+			<div class="col-md-12">
+				<div>
+					<form name="Form">
+						<div class="row">
+							<div class="col-md-12">
+								<fieldset>
 
-								<div class="form-group" ng-class="{'has-error':Form.name.$dirty && Form.name.$invalid, 'has-success':Form.name.$valid}">
-									<label class="control-label">
-										 Name <span class="symbol required"></span>
+									<div class="form-group" ng-class="{'has-error':Form.employees.$dirty && Form.employees.$invalid, 'has-success':Form.employees.$valid}">
+                    <label class="control-label">
+                    Employees <span class="symbol required"></span>
+                  </label>
+                              <p class="input-group">
+                      <input type="text" placeholder="Enter your Employees" class="form-control" name="employees" ng-model="myModel.employees" required readonly/>
+                      <span class="input-group-btn">
+                      <button class="btn btn-default" ng-click="openemployees('lg')" md-ink-ripple
+                        tooltip="Pilih Members"><i
+                        class="glyphicon glyphicon-list"></i></button>
+
+                    <span class="error text-small block" ng-if="Form.employees.$dirty && Form.employees.$invalid">First Employees is required</span>
+
+                      <span class="success text-small" ng-if="Form.employees.$valid">Thank You!</span>
+                      </span>
+                  </div>
+
+									<div class="form-group" ng-class="{'has-error':Form.name.$dirty && Form.name.$invalid, 'has-success':Form.name.$valid}">
+										<label class="control-label">
+										 Username <span class="symbol required"></span>
 									</label>
-									<input gender="text" placeholder="Enter your Name" class="form-control" name="name" ng-model="myModel.name"
-									 required />
-									<span class="error text-small block" ng-if="Form.name.$dirty && Form.name.$invalid">First Name is required</span>
-									<span class="success text-small" ng-if="Form.name.$valid">Thank You!</span>
-								</div>
-                                <div class="form-group" ng-class="{'has-error':Form.ktp.$dirty && Form.ktp.$invalid, 'has-success':Form.ktp.$valid}">
-									<label class="control-label">
+										<input gender="text" placeholder="Enter your Name" class="form-control" name="name" ng-model="myModel.name" required />
+										<span class="error text-small block" ng-if="Form.name.$dirty && Form.name.$invalid">First Name is required</span>
+										<span class="success text-small" ng-if="Form.name.$valid">Thank You!</span>
+									</div>
+									<div class="form-group" ng-class="{'has-error':Form.ktp.$dirty && Form.ktp.$invalid, 'has-success':Form.ktp.$valid}">
+										<label class="control-label">
 										 Ktp <span class="symbol required"></span>
 									</label>
-									<input gender="text" placeholder="Enter your Ktp" class="form-control" name="ktp" ng-model="myModel.ktp"
-									 required />
-									<span class="error text-small block" ng-if="Form.ktp.$dirty && Form.ktp.$invalid">First Name is required</span>
-									<span class="success text-small" ng-if="Form.ktp.$valid">Thank You!</span>
-								</div>
-								<div class="form-group" ng-class="{'has-error':Form.gender.$dirty && Form.gender.$invalid, 'has-success':Form.gender.$valid}">
-									<label class="control-label">
+										<input gender="text" placeholder="Enter your Ktp" class="form-control" name="ktp" ng-model="myModel.ktp" required />
+										<span class="error text-small block" ng-if="Form.ktp.$dirty && Form.ktp.$invalid">First Name is required</span>
+										<span class="success text-small" ng-if="Form.ktp.$valid">Thank You!</span>
+									</div>
+									<div class="form-group" ng-class="{'has-error':Form.gender.$dirty && Form.gender.$invalid, 'has-success':Form.gender.$valid}">
+										<label class="control-label">
 										 Gender <span class="symbol required"></span>
 									</label>
-									<input gender="text" placeholder="Enter your Gender" class="form-control" name="gender" ng-model="myModel.gender"
-									 required />
-									<span class="error text-small block" ng-if="Form.gender.$dirty && Form.gender.$invalid">First Gender is required</span>
-									<span class="success text-small" ng-if="Form.gender.$valid">Thank You!</span>
-								</div>
+										<input gender="text" placeholder="Enter your Gender" class="form-control" name="gender" ng-model="myModel.gender" required
+										/>
+										<span class="error text-small block" ng-if="Form.gender.$dirty && Form.gender.$invalid">First Gender is required</span>
+										<span class="success text-small" ng-if="Form.gender.$valid">Thank You!</span>
+									</div>
 
-								<!--<div class="form-group" ng-class="{'has-error':Form.email.$dirty && Form.email.$invalid, 'has-success':Form.email.$valid}">
+									<!--<div class="form-group" ng-class="{'has-error':Form.email.$dirty && Form.email.$invalid, 'has-success':Form.email.$valid}">
 									<label class="control-label">
 										Email <span class="symbol required"></span>
 									</label>
@@ -60,52 +75,48 @@
 									<span class="success text-small" ng-if="Form.email.$valid">It's a valid e-mail!</span>
 								</div>-->
 
-								<div class="form-group" ng-class="{'has-error':Form.phone.$dirty && Form.phone.$invalid, 'has-success':Form.phone.$valid}">
-									<label class="control-label">
+									<div class="form-group" ng-class="{'has-error':Form.phone.$dirty && Form.phone.$invalid, 'has-success':Form.phone.$valid}">
+										<label class="control-label">
 										Phone <span class="symbol required"></span>
 									</label>
-									<input gender="text" placeholder="Enter your Phone" class="form-control" name="phone" ng-model="myModel.phone"
-										   required />
-									<span class="error text-small block" ng-if="Form.phone.$dirty && Form.phone.$invalid">First Phone is required</span>
-									<span class="success text-small" ng-if="Form.phone.$valid">Thank You!</span>
-								</div>
+										<input gender="text" placeholder="Enter your Phone" class="form-control" name="phone" ng-model="myModel.phone" required />
+										<span class="error text-small block" ng-if="Form.phone.$dirty && Form.phone.$invalid">First Phone is required</span>
+										<span class="success text-small" ng-if="Form.phone.$valid">Thank You!</span>
+									</div>
 
-								<div class="form-group" ng-class="{'has-error':Form.address.$dirty && Form.address.$invalid, 'has-success':Form.address.$valid}">
-									<label class="control-label">
+									<div class="form-group" ng-class="{'has-error':Form.address.$dirty && Form.address.$invalid, 'has-success':Form.address.$valid}">
+										<label class="control-label">
 										Address <span class="symbol required"></span>
 									</label>
-									<input gender="text" placeholder="Enter your Class" class="form-control" name="address" ng-model="myModel.address"
-										   required />
-									<span class="error text-small block" ng-if="Form.address.$dirty && Form.address.$invalid">First Address is required</span>
-									<span class="success text-small" ng-if="Form.address.$valid">Thank You!</span>
-								</div>
+										<input gender="text" placeholder="Enter your Class" class="form-control" name="address" ng-model="myModel.address" required
+										/>
+										<span class="error text-small block" ng-if="Form.address.$dirty && Form.address.$invalid">First Address is required</span>
+										<span class="success text-small" ng-if="Form.address.$valid">Thank You!</span>
+									</div>
 
-							</fieldset>
-						</div>
-						</div>
-
-					<div class="row">
-						<div class="col-md-12">
-							<div class="pull-left">
-								<button md-ink-ripple class="btn btn-primary" ng-click="submitData(false)"
-										ng-disabled="Form.$invalid || process">Simpan
-								</button>
-								<button md-ink-ripple class="btn btn-primary" ng-click="submitData(true)"
-										ng-disabled="Form.$invalid || process">Simpan & Kembali
-								</button>
-								<button gender="reset" class="btn btn-primary btn-o" ng-disabled="process" ng-click="form.reset(Form)">
-									Reset
-								</button>
-								<button md-ink-ripple class="btn btn-primary btn-o" ui-sref="app.transactions-list"
-										ng-disabled="process">Kembali
-								</button>
+								</fieldset>
 							</div>
 						</div>
-					</div>
-				</form>
+
+						<div class="row">
+							<div class="col-md-12">
+								<div class="pull-left">
+									<button md-ink-ripple class="btn btn-primary" ng-click="submitData(false)" ng-disabled="Form.$invalid || process">Simpan
+								</button>
+									<button md-ink-ripple class="btn btn-primary" ng-click="submitData(true)" ng-disabled="Form.$invalid || process">Simpan & Kembali
+								</button>
+									<button gender="reset" class="btn btn-primary btn-o" ng-disabled="process" ng-click="form.reset(Form)">
+									Reset
+								</button>
+									<button md-ink-ripple class="btn btn-primary btn-o" ui-sref="app.transactions-list" ng-disabled="process">Kembali
+								</button>
+								</div>
+							</div>
+						</div>
+					</form>
+				</div>
 			</div>
 		</div>
 	</div>
 </div>
-	</div>
 <!-- end: FORM VALIDATION -->
