--- a/public/assets/src/transactions/transactions-list.html
+++ b/public/assets/src/transactions/transactions-list.html
@@ -45,22 +45,26 @@
                 <thead>
                 <tr>
                     <th class="col-md-1">No.</th>
+                    <th class="col-md-2">Date Loans</th>
                     <th class="col-md-2">Name</th>
-                    <th class="col-md-2">KTP</th>
-                    <th class="col-md-2">Gender</th>
-                    <th class="col-md-2">Phone</th>
-                    <th class="col-md-2">Address</th>
+                    <th class="col-md-2">Employees</th>
+                    <th class="col-md-2">Cars</th>
+                    <th class="col-md-2">Drivers</th>
+                    <th class="col-md-2">Destiations</th>
+                    <th class="col-md-2">Date Returns</th>
                     <th class="col-md-2">Aksi</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr ng-repeat="row in dataTransactions">
                     <td  class="col-md-1">{{$index +1}}</td>
-                    <td class="col-md-2">{{row.name}}</td>
-                    <td class="col-md-2">{{row.ktp}}</td>
-                    <td class="col-md-2">{{row.gender}}</td>
-                    <td class="col-md-2">{{row.phone}}</td>
-                    <td class="col-md-2">{{row.address}}</td>
+                    <td class="col-md-2">{{row.transactions.date_loans}}</td>
+                    <td class="col-md-2">{{row.users.name}}</td>
+                    <td class="col-md-2">{{row.employees.name}}</td>
+                    <td class="col-md-2">{{row.cars.merk}}</td>
+                    <td class="col-md-2">{{row.drivers.name}}</td>
+                    <td class="col-md-2">{{row.destiations}}</td>
+                    <td class="col-md-2">{{row.transactions.date_returns}}</td>
 
 
                     <td class="col-md-2">
