--- a/public/assets/src/users/users-create.html
+++ b/public/assets/src/users/users-create.html
@@ -1,126 +1,122 @@
-<div class="alert {{alertset.class}} lighten-4 {{alertset.class}}-text text-darken-2 {{alertset.show}}">
-    <span ng-repeat="(key, value) in alertset.msg">{{value}}</span>
+<!-- start: PAGE TITLE -->
+<div ng-controller="UsersCreateCtrl">
+	<section id="page-title">
+		<div class="row">
+			<div class="col-sm-8">
+				<h1 class="mainTitle">FORM CREATE USERS</h1>
+			</div>
+			<div ncy-breadcrumb></div>
+		</div>
+	</section>
+	<uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">
+		{{alert.msg}}
+	</uib-alert>
+	<!-- end: PAGE TITLE -->
+	<!-- start: FORM VALIDATION -->
+	<div class="container-fluid container-fullw bg-white">
+		<div class="row">
+			<div class="col-md-12">
+				<div>
+					<form name="Form">
+						<div class="row">
+							<div class="col-md-12">
+								<fieldset>
+
+									<div class="form-group" ng-class="{'has-error':Form.name.$dirty && Form.name.$invalid, 'has-success':Form.name.$valid}">
+										<label class="control-label">
+										 Name <span class="symbol required"></span>
+									</label>
+										<input type="text" placeholder="Enter your Name" class="form-control" name="name" ng-model="myModel.name" required />
+										<span class="error text-small block" ng-if="Form.name.$dirty && Form.name.$invalid">First Name is required</span>
+										<span class="success text-small" ng-if="Form.name.$valid">Thank You!</span>
+									</div>
+									<div class="form-group" ng-class="{'has-error':Form.email.$dirty && Form.email.$invalid, 'has-success':Form.email.$valid}">
+									<label class="control-label">
+										Email <span class="symbol required"></span>
+									</label>
+									<input type="email" placeholder="Enter a valid E-mail" class="form-control" name="email" ng-model="myModel.email" required>
+									<span class="error text-small block" ng-if="Form.email.$dirty && Form.email.$error.required">Email is required.</span>
+									<span class="error text-small block" ng-if="Form.email.$error.email">Please, enter a valid email address.</span>
+									<span class="success text-small" ng-if="Form.email.$valid">It's a valid e-mail!</span>
+								</div>
+								<div class="form-group" ng-class="{'has-error':Form.address.$dirty && Form.address.$invalid, 'has-success':Form.address.$valid}">
+									<label class="control-label">
+										Address <span class="symbol required"></span>
+									</label>
+									<input type="text" placeholder="Enter your First Name" class="form-control" name="address" ng-model="myModel.address" required />
+									<span class="error text-small block" ng-if="Form.address.$dirty && Form.address.$invalid">First Name is required</span>
+									<span class="success text-small" ng-if="Form.address.$valid">Thank You!</span>
+								</div>
+								<div class="form-group" ng-class="{'has-error':Form.ktp.$dirty && Form.ktp.$invalid, 'has-success':Form.ktp.$valid}">
+									<label class="control-label">
+										KTP <span class="symbol required"></span>
+									</label>
+									<input type="text" placeholder="Enter your First Name" class="form-control" name="ktp" ng-model="myModel.ktp" required />
+									<span class="error text-small block" ng-if="Form.ktp.$dirty && Form.ktp.$invalid">First Name is required</span>
+									<span class="success text-small" ng-if="Form.ktp.$valid">Thank You!</span>
+								</div>
+									<div class="form-group" ng-class="{'has-error':Form.phone.$dirty && Form.phone.$invalid, 'has-success':Form.phone.$valid}">
+										<label class="control-label">
+										 Phone <span class="symbol required"></span>
+									</label>
+										<input type="text" placeholder="Enter your Phone" class="form-control" name="phone" ng-model="myModel.phone" required />
+										<span class="error text-small block" ng-if="Form.phone.$dirty && Form.phone.$invalid">First Class is required</span>
+										<span class="success text-small" ng-if="Form.phone.$valid">Thank You!</span>
+									</div>
+
+									<div class="form-group" ng-class="{'has-error':Form.level.$dirty && Form.level.$invalid, 'has-success':Form.level.$valid}">
+										<label class="control-label">
+										Level <span class="symbol required"></span>
+									</label>
+										<input type="text" placeholder="Enter your Level" class="form-control" name="level" ng-model="myModel.level" required />
+										<span class="error text-small block" ng-if="Form.level.$dirty && Form.level.$invalid">First Level is required</span>
+										<span class="success text-small" ng-if="Form.level.$valid">Thank You!</span>
+									</div>
+
+												<div class="form-group" ng-class="{'has-error':Form.password.$dirty && Form.password.$invalid, 'has-success':Form.password.$valid}">
+									<label class="control-label">
+										Password <span class="symbol required"></span>
+									</label>
+									<input type="password" placeholder="Enter a Password" class="form-control" name="password" ng-model="myModel.password" required/>
+									<span class="error text-small block" ng-if="Form.password.$dirty && Form.password.$error.required">Password is required.</span>
+									<span class="success text-small block" ng-if="Form.password.$valid">Ok!</span>
+								</div>
+								<div class="form-group" ng-class="{'has-error':Form.password2.$dirty && Form.password2.$error.compareTo || Form.password2.$dirty && Form.password2.$invalid, 'has-success':Form.password2.$valid}">
+									<label class="control-label">
+										Repeat Password <span class="symbol required"></span>
+									</label>
+									<input type="password" placeholder="Repeat Password" class="form-control" name="password2" ng-model="myModel.password2" compare-to="myModel.password"
+									 required/>
+									<span class="error text-small block" ng-if="Form.password2.$dirty && Form.password2.$error.required">Repeat password is required!</span>
+									<span class="error text-small block" ng-if="Form.password2.$dirty && Form.password2.$error.compareTo">Passwords do not match!</span>
+									<span class="success text-small block" ng-if="Form.password2.$valid">Passwords match!</span>
+								</div>
+					
+
+
+								</fieldset>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="col-md-12">
+								<div class="pull-left">
+									<button md-ink-ripple class="btn btn-primary" ng-click="submitData(false)" ng-disabled="Form.$invalid || process">Simpan
+								</button>
+									<button md-ink-ripple class="btn btn-primary" ng-click="submitData(true)" ng-disabled="Form.$invalid || process">Simpan & Kembali
+								</button>
+									<button type="reset" class="btn btn-primary btn-o" ng-disabled="process" ng-click="form.reset(Form)">
+									Reset
+								</button>
+									<button md-ink-ripple class="btn btn-primary btn-o" ui-sref="app.users-list" ng-disabled="process">Kembali
+								</button>
+								</div>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
-<form class="form-validation ng-invalid ng-invalid-required ng-valid-pattern ng-valid-email ng-dirty ng-valid-parse ng-invalid-validator"
-      name="addForm" style="">
-    <div class="panel panel-default">
-        <div class="panel-heading bg-white" style="background: #000000;">
-            <span class="font-bold"><left><font
-                    color="white">TAMBAH DATA PENGGUNA ADMINISTRATOR - [BackOffice]</font></left></span>
-        </div>
-        <div class="card-body">
-            <div class="panel-body" style="background: #b3e5fc;">
-                <div class="form-group">
-                    <div class="row row-sm">
-                        <div class="col-sm-12">
-                            <div class="md-form-group float-label">
-                                <div class="input-field">
-                                    <label>Nama Lengkap</label>
-                                    <input class="form-control" placeholder="Nama Lengkap"
-                                           ng-model="input.name" name="name"
-                                           type="text" required="" tabindex="0" aria-required="true"
-                                           aria-invalid="true">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row row-sm">
-                        <div class="col-sm-12">
-                            <div class="md-form-group float-label">
-                                <div class="input-field">
-                                    <label>Nomor Induk Pegawai</label>
-                                    <input class="form-control" placeholder="Nomor Induk Pegawai"
-                                           ng-model="input.nip" type="text" required="" minlength="21" maxlength="21">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row row-sm">
-                        <div class="col-sm-12">
-                            <div class="md-form-group float-label">
-                                <div class="input-field">
-                                    <label>Email</label>
-                                    <input class="form-control" placeholder="Email"
-                                           type="email" ng-model="input.email" name="email" required="" tabindex="0"
-                                           aria-required="false" aria-invalid="false" style="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row row-sm">
-                    <div class="col-sm-12">
-                        <div class="md-form-group float-label">
-                            <div class="input-field">
-                                <label>Password</label>
-                                <input class="form-control" placeholder="Password"
-                                       type="password" required="" ng-model="input.password" name="password"
-                                       tabindex="0"
-                                       aria-required="false" aria-invalid="false" style="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row row-sm">
-                    <div class="col-sm-12">
-                        <div class="md-form-group float-label">
-                            <div class="input-field">
-                                <label>Konfirmasi Password</label>
-                                <input class="form-control" placeholder="Konfirmasi Password"
-                                       type="password" ui-validate-watch=" 'input.password' "
-                                       ui-validate=" '$value==input.password' " ng-model="input.password_confirmation"
-                                       required="" name="password_confirmation" tabindex="0" aria-required="false"
-                                       aria-invalid="true" style="">
-                                <span class="" ng-show="addForm.password_confirmation.$error.validator"
-                                      aria-hidden="false"
-                                      style="" class="glyphicon glyphicon-remove form-control-feedback">Passwords Tidak Sama!</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row row-sm">
-                    <div class="col-sm-12">
-                        <div class="md-form-group">
-                            <div class="input-field">
-                                <label>Level Pengguna</label>
-                                <select md-select-label class="form-control" placeholder="Level Pengguna" style=""
-                                        ng-model="input.level">
-                                    <option value="">Pilih level Pengguna</option>
-                                    <option ng-if="detailbatas <2" value="100">Administrator</option>
-                                    <option value="101">Pimpinan Daerah</option>
-                                    <option value="102">Pimpinan Administrator</option>
-                                    <option value="103">Kontibutor-Perencanaan</option>
-                                    <option value="104">Kontributor-Referensi</option>
-                                    <option value="105">Verifikator-Perencanaan</option>
-                                    <option value="106">Verifikator-LockSystem</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row row-sm">
-                    <div class="col-sm-12">
-                        <div class="md-form-group float-label">
-                            <div class="input-field">
-                                <label>Kontak Pribadi</label>
-                                <input class="form-control" placeholder="Kontak Pribadi"
-                                       ng-model="input.no_telp" type="text">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <footer class="panel-footer text-center" style="background: #269abc">
-                <button md-ink-ripple class="md-btn md-raised m-b btn-fw blue" ng-click="submitData(false)"
-                        ng-disabled="addForm.$invalid || process">Simpan
-                </button>
-                <button md-ink-ripple class="md-btn md-raised m-b btn-fw blue" ng-click="submitData(true)"
-                        ng-disabled="addForm.$invalid || process">Simpan & Kembali
-                </button>
-                <button md-ink-ripple class="md-btn md-raised m-b btn-fw bg-white" ui-sref="app.user"
-                        ng-disabled="process">Kembali
-                </button>
-            </footer>
-        </div>
-    </div>
-</form>
+<!-- end: FORM VALIDATION -->
