--- a/public/assets/src/transactions/detail.dialog.html
+++ b/public/assets/src/transactions/detail.dialog.html
@@ -22,7 +22,13 @@
                         <label class="col-sm-3 control-label">Tujuan</label>
                         <div ng-if="input.prov_id != ''" class="col-sm-9">
                             <p class="form-control-static">
-                                <span style="padding-left: 8px;"></span>{{myModel.cars.merk}}
+                                <span style="padding-left: 8px;"></span>{{myModel.destinations}}
+                            </p>
+                        </div>
+                        <label class="col-sm-3 control-label">Tanggal</label>
+                        <div ng-if="input.prov_id != ''" class="col-sm-9">
+                            <p class="form-control-static">
+                                <span style="padding-left: 8px;"></span>{{myModel.date_transactions}}
                             </p>
                         </div>
 
@@ -32,7 +38,7 @@
 
 
 
-    <table class="table table-striped table-hover">
+    <!--<table class="table table-striped table-hover">
         <tr>
                     <th class="col-md-2">Name Customer</th>
                     <th class="col-md-2">Cars</th>
@@ -43,8 +49,8 @@
                     <th class="col-md-2">Denda</th>
                     <th class="col-md-2">Total Bayar</th>
         </tr>
-    </table>
-    <md-content>
+    </table>-->
+    <!--<md-content>
         <div class="panel panel-default">
             <div ng-show="isLoaded">
             </div>
@@ -66,7 +72,7 @@
             </div>
             </div>
         </div>
-    </md-content>
+    </md-content>-->
     <footer class="panel-footer text-center" style="background: #269abc">
         <md-button class="btn btn-fw btn-default" ng-click='cancel()' tooltip="Kembali">
             Kembali
